<resources>
    <string name="app_name">clone-daum</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

        Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

        Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

        Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="main_realtime">실시간</string>
    <string name="main_realtime_issue_network_error">NetErr</string>
    <string name="main_weather_more">더 보기 &gt;</string>
    <string name="main_weather_current_position">현위치</string>
    <string name="main_realtime_issue_load_error">실시간 이슈 정보를 제대로 불러오지 못했사옵니다.</string>
    <string name="main_realtime_issue_retry">재시도</string>
    <string name="media_search_history">히스토리</string>
    <string name="media_search_voice">음성검색</string>
    <string name="media_search_music">음악검색</string>
    <string name="media_search_flower">꽃검색</string>
    <string name="media_search_code">코드검색</string>
    <string name="speech_pls_speak_search_keyword">검색어를 말해주세요</string>
    <string name="speech_listening">듣고있삼</string>
    <string name="speech_processing">처리 중..</string>
    <string name="speech_no_result">알아먹을수 없삼</string>
    <string name="speech_error_client">내 폰에선 잘됬는데 안되네?</string>
    <string name="speech_error_audio">MIC 가 이상함</string>
    <string name="speech_error_recognition">말이 너무길었삼</string>
    <string name="speech_error_network">네트워크 오류삼</string>
    <string name="speech_error_network_timeout">네트워크 시간 초과삼</string>
    <string name="speech_error_server">서버에서 오류가 남</string>
    <string name="speech_error_unknown">알 수없는 오류발생</string>
    <string name="barcode_qr_barcode_search">QR/바코드 검색</string>
    <string name="barcode_barcode_search">바코드 입력</string>
    <string name="barcode_input">바코드 입력</string>
    <string name="barcode_book_search_only">바코드는 도서검색만 지원?</string>
    <string name="barcode_pls_insert_number_from_barcode_under_number">바코드 하단의 숫자를 입력해주세요</string>
    <string name="barcode_input_number">0123456789</string>
    <string name="barcode_not_detacted">코드를 인식할 수 없음</string>
    <string name="barcode_not_matched_info">해당코드와 일치하는 정보가 없음</string>
    <string name="navi_require_login">로그인하시오</string>
    <string name="navi_tab_shortcut">바로가기</string>
    <string name="navi_tab_mail">메일</string>
    <string name="navi_tab_cafe">카페</string>
    <string name="navi_notice">공지사항</string>
    <string name="navi_notice_message">개인정보 처리방침 개정 안내</string>
    <string name="navi_login">로그인</string>
    <string name="navi_logout">로그아웃</string>
    <string name="navi_require_login_check_mail">로그인하여\n내 메일 목록을 확인해 보세요</string>
    <string name="navi_require_login_check_cafe">로그인하여\n내 카페 목록을 확인해 보세요</string>
    <string name="navi_show_cafe">카페 둘러보기</string>
    <string name="shortcut_link_history">앱을 통해 이동한 자주가는 사이트가 여기에 노출됨</string>
    <string name="shortcut_sitemap_title">전체서비스 &gt;</string>
    <string name="shortcut_favorite_title">자주가는 사이트</string>
    <string name="shortcut_favorite_description">앱을 통해 이동한 방문기록 중\n자주가는 사이트가 이곳에 노출됩니다.</string>
    <string name="shortcut_move_site">사이트이동 &gt;</string>
    <string name="shortcut_text_app">App</string>
    <string name="setting_title">앱설정</string>
    <string name="setting_category_myinfo">내 정보</string>
    <string name="setting_category_alarm">알림</string>
    <string name="setting_category_browser">브라우저</string>
    <string name="setting_category_other">부가기능</string>
    <string name="setting_category_service_info">서비스 정보</string>
    <string name="setting_login_info">로그인 정보</string>
    <string name="setting_pls_login">로그인 하세요</string>
    <string name="setting_auto_login">자동로그인</string>
    <string name="setting_auto_login_summary">카카오계정 로그인 및 간편아이디 이용 중에는 자동로그인 상태가 유지됩니다.</string>
    <string name="setting_privacy">개인정보 설정</string>
    <string name="setting_alarm_item">알림 항목 설정</string>
    <string name="setting_alarm_item_summary">다음이 추천하는 인기 콘텐츠 및 생활 정보를 받아볼 수 있습니다.</string>
    <string name="setting_alarm_preference">알림 환경 설정</string>
    <string name="setting_alarm_preference_summary">알림 모드, 에티켓 시간 등 알림에 대한 환경 설정을 할 수 있습니다.</string>
    <string name="setting_popup_blocking">팝업 차단</string>
    <string name="setting_popup_blocking_summary">팝업 차단을 사용하면 볼 필요한 팝업 노출 없이 쾌적하게 인터넷을 이용할 수 있습니다.</string>
    <string name="setting_character_set">문자 인코딩</string>
    <string name="setting_character_set_euckr">한국어(EUC-KR)</string>
    <string name="setting_character_set_latin">"라틴어-1(ISO-8859-1)"</string>
    <string name="setting_character_set_unicode">유니코드(UTF-8)</string>
    <string name="setting_character_set_jap_iso">일본어(ISO-2022-JP)</string>
    <string name="setting_character_set_jap_jis">일본어(SHIFT_JIS)</string>
    <string name="setting_character_set_jap_euc">일본어(EUC-JP)</string>
    <string name="setting_media_autoplay">미디어 자동재생</string>
    <string name="setting_media_autoplay_summary">웹 페이지 내 동영상과 음악의 자동재생 여부를 선택합니다.\n라이브 및 동영상 광고 자동재생 역시 해당 설정을 기반으로 재생됩니다.</string>
    <string name="setting_media_autoplay_always">항상</string>
    <string name="setting_media_autoplay_wifi_only">Wi-Fi 연결 시에만</string>
    <string name="setting_media_autoplay_not_used">사용 안 함</string>
    <string name="setting_used_location">위치 정보 사용</string>
    <string name="setting_used_location_summary">위치정보를 기반으로 위치확인, 날씨 검색결과, 콘텐츠 추천 및 광고를 제공 합니다.</string>
    <string name="setting_simple_search">간편 검색 설정</string>
    <string name="setting_simple_search_summary">휴대폰 상단의 알림 영역을 통해 간편하게 다음 검색을 사용할 수 있습니다.</string>
    <string name="setting_privacy_policy_save_keyword">검색어 저장</string>
    <string name="setting_privacy_policy_save_history">방문기록 저장</string>
    <string name="setting_privacy_policy_remove_history">사용기록 지우기</string>
    <string name="setting_privacy_policy_set_download_path">다운로드 경로 설정</string>
    <string name="setting_privacy_policy_manage_downloaded_file">다운로드 파일 관리</string>
    <string name="setting_privacy_policy_up">위로</string>
    <string name="setting_remove_history_history">방문기록</string>
    <string name="setting_remove_history_cache">캐시</string>
    <string name="setting_remove_history_auto_complete">양식 데이터 자동완성</string>
    <string name="setting_remove_history_multi_browser_tab">멀티 브라우저 탭</string>
    <string name="setting_remove_history_recent_keyword">최근 검색어</string>
    <string name="setting_daumapp_info">다음앱 정보</string>
    <string name="setting_daumapp_use_lastest_app">최신버전 사용 중</string>
    <string name="setting_daumapp_current_version">"현재 버전 %s"</string>
    <string name="setting_daumapp_lastest_version">"최신 버전 %s"</string>
    <string name="setting_daumapp_update">업데이트</string>
    <string name="setting_daumapp_move_mobile_web">Daum 모바일웹으로 이동</string>
    <string name="setting_daumapp_other_app">다른 애플리케이션 보기</string>
    <string name="setting_daumapp_open_source_license">오픈소스 라이선스</string>
    <string name="setting_daumapp_terms_of_use">이용약관</string>
    <string name="setting_daumapp_privacy_policy">개인정보처리방침</string>
    <string name="setting_daumapp_contact_us">고객센터 문의하기</string>
    <string name="setting_daumapp_kakaocorp">"@ Kakao Corp"</string>
    <string name="setting_daumapp_update_daumapp">update daumapp</string>
    <string name="setting_research">실험실</string>
    <string name="setting_research_fixed_address_bar">주소창 고정</string>
    <string name="setting_research_fixed_address_bar_summary">브라우저 진입 시 주소창이 화면 상단에 항상 고정 됩니다.</string>
    <string name="setting_save_keyword">검색어 저장</string>
    <string name="setting_save_history">방문기록 저장</string>
    <string name="setting_remove_history">사용기록 지우기</string>
    <string name="setting_download_path">다운로드 경로 설정</string>
    <string name="setting_control_download_file">다운로드 파일 관리</string>
    <string name="setting_visit_history">방문기록</string>
    <string name="setting_cache">캐시</string>
    <string name="setting_auto_complete">양식 데이터 자동완성</string>
    <string name="setting_multi_browser_tab">멀리 브라우저 탭</string>
    <string name="setting_recent">최근 검색어</string>
    <string name="setting_remove">지우기</string>
    <string name="setting_breaking_news">뉴스속보</string>
    <string name="setting_breaking_news_summary">뉴스속보를 알려드립니다.</string>
    <string name="setting_today_pick">"Today's Pick"</string>
    <string name="setting_today_pick_summary">화제의 소식과 재미있는 이야기들</string>
    <string name="setting_weather">날씨</string>
    <string name="setting_weather_summary">꼭 필요한 날씨 정보들을 알려드립니다.</string>
    <string name="setting_lotte">로또</string>
    <string name="setting_lotte_summary">매주 로또 당첨 번호를 알려드립니다.</string>
    <string name="setting_event_alarm">이벤트 알림</string>
    <string name="setting_event_alarm_summary">다음앱 이벤트 소식과 당첨내역 알림</string>
    <string name="setting_fortune">운세</string>
    <string name="setting_fortune_summary">운세를 알려드립니다.</string>
    <string name="setting_mail">메일</string>
    <string name="setting_mail_all_alarm">전체알림 / 지인알림 선택</string>
    <string name="setting_cafe">카페</string>
    <string name="setting_cafe_new_article_alarm">활동알림 / 새글알림</string>
    <string name="setting_alarm_env_set_alarm_mode">알림모드</string>
    <string name="setting_alarm_env_set_enable_screen">알림 도착시 화면 활성화</string>
    <string name="setting_alarm_env_set_enable_screen_summary">알림이 오면 화면이 켜집니다.</string>
    <string name="setting_alarm_env_set_etiquette">에티켓 시간설정</string>
    <string name="setting_alarm_env_set_etiquette_summary">알림수신 제한 시간을 설정할 수 있습니다.</string>
    <string name="setting_alarmmode_mute">무음</string>
    <string name="setting_alarmmode_sound">사운드</string>
    <string name="search_delete_all_history">전체삭제</string>
    <string name="search_cancel">취소</string>
    <string name="search_insert_search_keyword_or_url">검색어 또는 URL 입력</string>
    <string name="search_popular_keyword">인기검색어</string>
</resources>