<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 내 정보 -->

    <PreferenceCategory
            android:title="@string/setting_category_myinfo"
            android:layout="@layout/setting_category_layout"
            >
        <Preference
            android:title="@string/setting_login_info"

                />
        <Preference
            android:title="@string/setting_auto_login" />
        <Preference
            android:title="@string/setting_privacy" />
    </PreferenceCategory>

    <!-- 알림 -->

    <PreferenceCategory
            android:title="@string/setting_category_alarm"
            android:layout="@layout/setting_category_layout"
            >
        <Preference
            android:title="@string/setting_alarm_item"
            android:summary="@string/setting_alarm_item_description" />
        <Preference
            android:title="@string/setting_alarm_preference"
            android:summary="@string/setting_alarm_preference_description" />
    </PreferenceCategory>

    <!-- 브라우저 -->

    <PreferenceCategory
            android:title="@string/setting_category_browser"
            android:layout="@layout/setting_category_layout"
            >
        <Preference
            android:title="@string/setting_popup_blocking"
            android:summary="@string/setting_popup_blocking_description" />
        <Preference
            android:title="@string/setting_character_set" />
        <Preference
            android:title="@string/setting_media_autoplay"
            android:summary="@string/setting_media_autoplay_description" />
    </PreferenceCategory>

    <!-- 부가기능 -->

    <PreferenceCategory
            android:title="@string/setting_category_other"
            android:layout="@layout/setting_category_layout"
            >
        <Preference
            android:title="@string/setting_used_location"
            android:summary="@string/setting_used_location_description" />
        <Preference
            android:title="@string/setting_simple_search"
            android:summary="@string/setting_simple_search_description" />
    </PreferenceCategory>

    <!-- 서비스 정보 -->

    <PreferenceCategory
            android:title="@string/setting_category_other"
            android:layout="@layout/setting_category_layout"
            >
        <Preference
            android:title="@string/setting_daumapp_info"
                />
        <Preference
            android:title="@string/setting_research"
                />
    </PreferenceCategory>
</PreferenceScreen>