<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.example.clone_daum.ui.main.mediasearch.barcode.BarcodeInputViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/barcode_input_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
        >

        <TextView
                android:id="@+id/barcode_back"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/barcode_barcode_search"
                android:background="@android:color/white"
                android:paddingStart="@dimen/barcode_back_text_pad_s"
                android:paddingTop="@dimen/barcode_back_text_pad"
                android:paddingBottom="@dimen/barcode_back_text_pad"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/barcode_back_text"
        />

        <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/barcode_back_icon_pad"
                android:onClick="@{() -> model.finishEvent()}"
        />

        <TextView
                android:id="@+id/barcode_icon"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barcode_back"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/light_gray"
                android:text="@string/fa_barcode"
                android:textSize="@dimen/barcode_input_icon"
                android:paddingTop="@dimen/barcode_input_icon_pad_tb"
                android:paddingBottom="@dimen/barcode_input_icon_pad_tb"
                android:gravity="center|center_vertical"
                android:textColor="@android:color/black"
                android:textAppearance="@style/solid"
        />

        <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/barcode_icon"
                android:layout_marginBottom="@dimen/barcode_input_number_mgn_b"
                android:text="@string/barcode_input_number"
                android:textColor="@color/colorAccent"
        />

        <TextView
                android:id="@+id/barcode_pls_input"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barcode_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@android:color/black"
                android:textSize="@dimen/barcode_input_pls_input_text"
                android:text="@string/barcode_pls_insert_number_from_barcode_under_number"
                android:layout_marginTop="@dimen/barcode_input_pls_input_mgn_t"
        />

        <EditText
                android:id="@+id/barcode_edit"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barcode_pls_input"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/barcode_input_edt_pad"
                android:layout_margin="@dimen/barcode_input_edt_mgn"
                android:inputType="number"
                android:background="@drawable/shape_frequently_default_move_site_background"
                android:text="@={model.barcodeNumber}"
                android:imeOptions="actionDone"
                app:bindEditorAction="@{model.editorAction}"
        />

        <ImageView
                android:layout_width="wrap_content" android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/barcode_edit"
                app:layout_constraintEnd_toEndOf="@+id/barcode_edit"
                app:layout_constraintBottom_toBottomOf="@+id/barcode_edit"
                android:src="@drawable/ic_clear_black_24dp"
                android:padding="10dp"
                android:onClick="@{() -> model.commandEvent(model.CMD_CLEAR_EDIT)}"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
