<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.example.clone_daum.ui.search.SearchViewModel"/>
        <variable name="popularmodel" type="com.example.clone_daum.ui.search.PopularViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:focusable="true"
                android:background="@drawable/shape_search_background"
                android:hint="@string/search_insert_search_keyword_or_url"
                android:paddingStart="15dp"
                android:paddingEnd="40dp"
                android:singleLine="true"
                android:lines="1"
                android:text="@={model.searchKeyword}"
        />

        <ImageView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/search_edit"
                app:layout_constraintEnd_toEndOf="@+id/search_edit"
                app:layout_constraintBottom_toBottomOf="@+id/search_edit"
                android:src="@drawable/ic_android_black_14dp"
                android:padding="20sp"
                android:onClick="@{() -> model.search(model.searchKeyword)}"
        />

        <!-- search history & hit keywords -->

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottom_area_overline"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/search_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:bindItems="@{model.items}"
                        app:bindAdapter="@{model.adapter}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                        android:id="@+id/popular_keyword"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/search_popular_keyword"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/search_recycler"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:padding="10dp"
                        />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/chip_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:bindItems="@{popularmodel.items}"
                        app:bindAdapter="@{popularmodel.adapter}"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/popular_keyword"
                        app:layout_constraintEnd_toEndOf="parent"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <View
                android:id="@+id/bottom_area_overline"
                style="@style/line1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/search_bottom_area"
        />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_bottom_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="#fefefe"
                android:padding="15dp">

            <TextView
                    android:id="@+id/close_search_history"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/search_close_search_history"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    android:onClick="@{() -> model.closeSearchHistory()}"
            />

            <TextView
                    android:id="@+id/close_search_history_bar"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="|"
                    app:layout_constraintStart_toEndOf="@+id/close_search_history"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="10dp"
            />

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/search_delete_all_history"
                    app:layout_constraintStart_toEndOf="@+id/close_search_history_bar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="10dp"
                    android:onClick="@{() -> model.deleteAllHistory()}"
            />

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/search_cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias=".95"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:onClick="@{() -> model.searchCancel()}"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
